charts/lorekeeper/deployment-discord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot
  namespace: lorekeeper
  labels:
    app: discord-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot
  template:
    metadata:
      labels:
        app: discord-bot
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: discord-bot
          image: ghcr.io/imdevinc/thf-lore/discord-bot
          command: ["discord-bot"]
          imagePullPolicy: IfNotPresent
