charts/lorekeeper/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lorekeeper
spec:
  hostnames:
    - lorekeeper.int.imdevinc.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: lorekeeper
          namespace: lorekeeper
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
